# src/main/java/com/hiagosouza/api/quoted/controller/impl/CustomerController.java
@@ -1,12 +1,12 @@
 package com.hiagosouza.api.quoted.controller.impl;
 
 import com.hiagosouza.api.quoted.controller.BaseController;
-import com.hiagosouza.api.quoted.mapper.ClientMapper;
-import com.hiagosouza.api.quoted.model.ClientModel;
-import com.hiagosouza.api.quoted.model.ClientRequest;
-import com.hiagosouza.api.quoted.model.ClientResponse;
+import com.hiagosouza.api.quoted.mapper.CustomerMapper;
+import com.hiagosouza.api.quoted.model.CustomerModel;
+import com.hiagosouza.api.quoted.model.CustomerRequest;
+import com.hiagosouza.api.quoted.model.CustomerResponse;
 import com.hiagosouza.api.quoted.model.UserModel;
-import com.hiagosouza.api.quoted.services.impl.ClientService;
+import com.hiagosouza.api.quoted.services.impl.CustomerService;
 import com.hiagosouza.api.quoted.services.impl.UserService;
 import jakarta.validation.Valid;
 import lombok.extern.slf4j.Slf4j;
@@ -22,46 +22,46 @@ import java.util.List;
 
 @RestController
 @Slf4j
-public class ClientController extends BaseController {
+public class CustomerController extends BaseController {
 
-    private final ClientService clientService;
+    private final CustomerService customerService;
     private final UserService userService;
 
-    public ClientController(ClientService clientService, UserService userService) {
-        this.clientService = clientService;
+    public CustomerController(CustomerService customerService, UserService userService) {
+        this.customerService = customerService;
         this.userService = userService;
     }
 
-    @PostMapping("/clients/register")
-    public ResponseEntity<ClientResponse> createClient(@Valid @RequestBody ClientRequest client) {
-        ClientModel clientModel = ClientMapper.toModel(client);
+    @PostMapping("/customers/register")
+    public ResponseEntity<CustomerResponse> createCustomer(@Valid @RequestBody CustomerRequest customer) {
+        CustomerModel customerModel = CustomerMapper.toModel(customer);
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String email = authentication.getName();
-        clientModel.setCreatedAt(LocalDateTime.now());
-        clientModel.setUpdatedAt(LocalDateTime.now());
+        customerModel.setCreatedAt(LocalDateTime.now());
+        customerModel.setUpdatedAt(LocalDateTime.now());
 
         if (email != null) {
             UserModel user = userService.findByEmail(email);
-            clientModel.setOwnerId(user.getId());
+            customerModel.setOwnerId(user.getId());
         }
 
         try {
-            clientService.createClient(clientModel);
+            customerService.createCustomer(customerModel);
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.CONFLICT).build();
         }
         return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 
-    @GetMapping("/clients/list-all")
-    public ResponseEntity<?> getAllClients() {
+    @GetMapping("/customers/list-all")
+    public ResponseEntity<?> getAllCustomers() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String email = authentication.getName();
 
         if(email != null) {
             UserModel owner = userService.findByEmail(email);
-            List<ClientModel> clientList = new ArrayList<>(clientService.getClients(owner.getId()));
-            return ResponseEntity.status(HttpStatus.OK).body(clientList);
+            List<CustomerModel> customerList = new ArrayList<>(customerService.getCustomers(owner.getId()));
+            return ResponseEntity.status(HttpStatus.OK).body(customerList);
         } else {
             log.error("***** No authentication found in context *****");
             return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
